# game-engine

./: README.md
Code/: CMakeLists.txt
Code/Core/: CMakeLists.txt  core_manager.cpp  core_manager.hpp  file.hpp  screen.cpp  screen.hpp  size.hpp  stl_public.hpp  time.cpp  time.hpp
Code/Core/stl/: public.hpp
Code/Graphics/: CMakeLists.txt  stl_public.hpp
Code/Graphics/base/: buffer.hpp  buffer_data.hpp  object.hpp
Code/Graphics/gl/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_data.hpp  commands.cpp  commands.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  shader_stage.cpp  shader_stage.hpp  vertex_array.cpp  vertex_array.hpp
Code/Graphics/stl/: private.hpp
Code/Graphics/vk/: CMakeLists.txt  command_pool.cpp  command_pool.hpp  device.cpp  device.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  queue_indices.cpp  queue_indices.hpp  stl_private.hpp  surface.cpp  surface.hpp  surface_details.hpp  swapchain.cpp  swapchain.hpp
Code/Platform/: CMakeLists.txt  platform_manager.cpp  platform_manager.hpp  screen.cpp  screen.hpp  stl_private.hpp  stl_public.hpp  window_manager.cpp  window_manager.hpp
Code/Platform/base/: context.hpp  platform.hpp  platform_factory.hpp  window.hpp  window_config.hpp  window_hint.hpp  window_screen.cpp  window_screen.hpp  window_size.hpp
Code/Platform/core/: platform.hpp  platform_factory.hpp  window.cpp  window.hpp  window_config.hpp  window_hint.hpp  window_screen.hpp
Code/Platform/glfw/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  context.cpp  context.hpp  platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  stl_private.hpp  window.cpp  window.hpp  window_callbacks.cpp  window_callbacks.hpp
Code/Platform/stl/: private.hpp  public.hpp
Code/Platform/win/: platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  window.cpp  window.hpp
Code/Platform/win32/: context.cpp  context.hpp  platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp
Code/Platform/window/: config.hpp  param.hpp  screen.cpp  screen.hpp
Code/Utils/: CMakeLists.txt  time.cpp  time.hpp
Libraries/: CMakeLists.txt
Libraries/gainput/: CMakeLists.txt  README.md
Libraries/gainput/lib/: CMakeLists.txt
Libraries/gainput/lib/include/gainput/: GainputHelpers.h  GainputInputDevice.h  GainputInputManager.h  gainput.h
Libraries/gainput/lib/source/gainput/: GainputInputDevice.cpp  GainputInputManager.cpp  gainput.cpp
Libraries/gainput/lib/source/gainput/builtin/: GainputInputDeviceBuiltIn.cpp
Libraries/gainput/lib/source/gainput/keyboard/: GainputInputDeviceKeyboard.cpp
Libraries/gainput/lib/source/gainput/mouse/: GainputInputDeviceMouse.cpp
Libraries/glad/: glad.cpp
Libraries/glad/include/KHR/: khrplatform.h
Libraries/glad/include/glad/: glad.h
Libraries/glfw/: CMakeLists.txt  README.md
Libraries/glfw/include/GLFW/: glfw3.h  glfw3native.h
Libraries/glfw/include/glfw/: glfw3.h  glfw3native.h
Libraries/glfw/src/: CMakeLists.txt  cocoa_init.m  cocoa_platform.h  cocoa_window.m  context.c  glx_context.c  init.c  input.c  internal.h  monitor.c  nsgl_context.m  null_init.c  null_window.c  platform.c  platform.h  vulkan.c  wgl_context.c  win32_init.c  win32_monitor.c  win32_platform.h  win32_window.c  window.c  wl_init.c  wl_window.c  x11_init.c  x11_monitor.c  x11_platform.h  x11_window.c
Libraries/glfw/tests/: events.c  glfwinfo.c  reopen.c  tearing.c
Libraries/glm/: CMakeLists.txt  readme.md
